--- a/style.css
+++ b/style.css
@@ -215,3 +215,109 @@ button{
     color: #FFFFFF;
     
 }
+.pagina-opaca{
+    height: 100%;
+    width: 100%;
+    position:fixed;
+    top: 0;
+    right: 0;
+    z-index: 99;
+    background: rgba(255, 255, 255, 0.9);
+
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.confirmar-pedido{
+    width: 377px;
+    height: 353px;
+
+    top: 336px;
+    
+    background: #50D074;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 9px;
+}
+
+.confirmar-pedido{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.confirmar-pedido .confirme-seu-pedido{
+    margin-bottom: 28px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    text-align: center;
+    color: #FFFFFF;
+
+}
+
+.prato-escolhido, .bebida-escolhida, .sobremesa-escolhida{
+    margin-bottom: 13px;
+    padding-left: 25px;
+    padding-right: 25px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 26px;
+    letter-spacing: 0.018em;
+    color: #FFFFFF;
+}
+
+.preco-total{
+    margin-bottom: 24px;
+    padding-left: 25px;
+    padding-right: 25px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    letter-spacing: 0.018em;
+    color: #FFFFFF;
+}
+
+.confirmar-pedido button{
+    margin-bottom: 20px;
+    width: 329px;
+    height: 52px;
+    left: calc(50% - 329px/2 + 0.5px);
+    top: 583px;
+    background: #FFFFFF;
+    border-radius: 100px;
+    
+}
+
+.confirmar-pedido button p {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    letter-spacing: 0.018em;
+    color: #50D074;
+}
+
+.cancelar p{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0.018em;
+    color: #FFFFFF;
+
+}
